[package]
name = "rns"
version = "0.1.1"
description = "A library for Neovim configurations in C, Zig, or Rust"
license = "MPL"
repository = "https://github.com/NotAShelf/rns"
readme = "README.md"
keywords = ["neovim", "configuration", "ffi"]
categories = ["development-tools"]

[lib]
name = "rns"
path = "./src/lib/mod.rs"
crate-type = ["cdylib", "rlib"]
